database scaffold created

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SchoolContext": "Server=(localdb)\\mssqllocaldb;Database=SchoolContext-d5c4cd1a-1889-4e7e-b006-b374fa94cb58;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
